force-app/main/default/objects/E_Nach__c/E_Nach__c.object-meta.xml
<CustomObject>
    <label>E-Nach</label>
    <nameField>
        <displayFormat>EN-{00000000}</displayFormat>
        <label>E-Nach Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E-Nachs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>