force-app/main/default/objects/E_Nach__c/fields/Bank_Details__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Details</label>
    <referenceTo>IFSC_Master__c</referenceTo>
    <relationshipLabel>E-Nachs</relationshipLabel>
    <relationshipName>E_Nachs</relationshipName>
    <type>Lookup</type>
</CustomField>