force-app/main/default/objects/E_Nach__c/fields/Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disbursement</label>
    <referenceTo>Disbursement__c</referenceTo>
    <relationshipLabel>E-Nachs</relationshipLabel>
    <relationshipName>E_Nachs</relationshipName>
    <type>Lookup</type>
</CustomField>