force-app/main/default/objects/E_Nach__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application</label>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>E-Nachs</relationshipLabel>
    <relationshipName>E_Nachs</relationshipName>
    <type>Lookup</type>
</CustomField>