force-app/main/default/objects/E_Nach__c/fields/UMN__c.field-meta.xml
<CustomField>
    <fullName>UMN__c</fullName>
    <label>UMN</label>
    <length>200</length>
    <type>Text</type>
</CustomField>